@@ -2,10 +2,6 @@
 <Glabels-templates xmlns="http://snaught.com/glabels/2.0/">
 
 
-  <!-- ******************************************************************** -->
-  <!-- Avery non-standard size products (not US-Letter/Legal or ISO)        -->
-  <!-- ******************************************************************** -->
-
   <!-- =================================================================== -->
   <!-- OfficeMax 86112: Multi-Purpose Labels, 2'' x 4'', 3 per sheet       -->
   <!-- =================================================================== -->
@@ -18,16 +14,6 @@
     </Label-rectangle>
   </Template>
 
-  <!-- =================================================================== -->
-  <!-- Dymo 99102 Large Address labels.                                    -->
-  <!-- =================================================================== -->
-  <Template brand="Dymo" part="99012" size="Other" width="102.047pt" height="252.283pt" _description="Large Address Labels">
-    <Meta category="label"/>
-    <Label-rectangle id="0" width="102.047pt" height="252.283pt" round="0pt" x_waste="0pt" y_waste="0pt">
-      <Markup-margin size="0pt"/>
-      <Layout nx="1" ny="1" x0="0pt" y0="0pt" dx="102.047pt" dy="252.283pt"/>
-    </Label-rectangle>
-  </Template>
 
 
 </Glabels-templates>
